# stealtheye-cloud

./: AGENTS.md  AGENT_REPO_MAP.md  Cargo.toml  LICENSE  NEXT_ACTION.md  README.md  STEALTHEYE_ACTIVE.md  STEALTHEYE_CAPABILITIES.md  STEALTHEYE_DECISIONS.md  STEALTHEYE_RELAY.json  STEALTHEYE_RELAY.md  STEALTHEYE_SEAL.json  STEALTHEYE_WORKERS.md  llms-full.txt  llms.txt  package.json
.github/workflows/: mission-executor.yml  proof-activations.yml  proof-assistant-optimizer.yml  proof-browser.yml  proof-build-accelerator.yml  proof-e2e.yml  proof-fast.yml  proof-full.yml  proof-gateway.yml  proof-mission-executor.yml  proof-mission-gauntlet.yml  proof-mobile.yml  proof-remediator.yml  proof-windows-targeted.yml  s10-materialize-once.yml  stealtheye-command-dispatch.yml
.stealtheye/active/: current.md
.stealtheye/decisions/: canonical.md
.stealtheye/relay/: latest.md
.stealtheye/seals/: latest.json
.stealtheye/skills/browser-repair/: SKILL.md
.stealtheye/skills/ci-repair/: SKILL.md
.stealtheye/skills/codex-worker/: SKILL.md
.stealtheye/skills/mission-executor/: SKILL.md
.stealtheye/skills/oss-audit/: SKILL.md
.stealtheye/skills/public-kernel-drop/: SKILL.md
.stealtheye/skills/relay-generation/: SKILL.md
.stealtheye/skills/seal-generation/: SKILL.md
.stealtheye/skills/spec-generation/: SKILL.md
.stealtheye/skills/tab-resume/: SKILL.md
browser/playwright/: mobile.config.ts  playwright.config.ts
browser/playwright/mobile-tests/: s7-mobile-playtest.spec.ts
browser/playwright/tests/: browser-proof.spec.ts  (+1 more)
crates/secloud-activations/: Cargo.toml
crates/secloud-assistant-optimizer/: Cargo.toml
crates/secloud-build-accelerator/: Cargo.toml
crates/secloud-capabilities/: Cargo.toml
crates/secloud-ci/: Cargo.toml
crates/secloud-cli/: Cargo.toml
crates/secloud-cli/src/: main.rs
crates/secloud-connector-leverage/: Cargo.toml
crates/secloud-control/: Cargo.toml
crates/secloud-e2e/: Cargo.toml
crates/secloud-file-bundle/: Cargo.toml
crates/secloud-gateway/: Cargo.toml
crates/secloud-gemini-worker/: Cargo.toml
crates/secloud-guard/: Cargo.toml
crates/secloud-hardening/: Cargo.toml
crates/secloud-hypothesis/: Cargo.toml
crates/secloud-knowledge-mirror/: Cargo.toml
crates/secloud-learning/: Cargo.toml
crates/secloud-mcp-adapters/: Cargo.toml
crates/secloud-mission/: Cargo.toml
crates/secloud-mission-executor/: Cargo.toml
crates/secloud-mission-gauntlet/: Cargo.toml
crates/secloud-mobile-qa/: Cargo.toml
crates/secloud-notifications/: Cargo.toml
crates/secloud-packets/: Cargo.toml
crates/secloud-permission/: Cargo.toml
crates/secloud-proof-viewer/: Cargo.toml
crates/secloud-relay/: Cargo.toml
crates/secloud-release/: Cargo.toml
crates/secloud-remediator/: Cargo.toml
crates/secloud-repair-readiness/: Cargo.toml
crates/secloud-repo-worker/: Cargo.toml
crates/secloud-seal/: Cargo.toml
crates/secloud-search/: Cargo.toml
crates/secloud-workers/: Cargo.toml
docs/: AGENT_MODE_PACKETS.md  AGENT_OBSERVABILITY_TRACE_DIGEST.md  ASSISTANT_OPERATING_PROFILE.md  ASSISTANT_SELF_AUDIT.md  AUTHORITY_QUEUE.md  BACKGROUND_CAPABILITY_REALITY.md  BATCH_REPAIR_POLICY.md  BROWSER_BODY.md  BUILD_COCKPIT_CARD.md  CAPABILITY_REALITY_MAP.md  CHATGPT_SKILLS.md  CODEX_WORKER_LANE.md  CONTEXT_LOAD_POLICY.md  DEEP_RESEARCH_PACKETS.md  FILE_BUNDLE_RAIL.md  FIRST_E2E_MISSION.md  GITHUB_EVIDENCE_PACKS.md  HANDOFF_AND_CONTINUATION.md  HANDOFF_QUALITY_GATE.md  HARDENING_AND_COST_GUARDS.md  HYPOTHESIS_RACING.md  LOW_ATTENTION_WORKDAY_MODE.md  MCP_APP_CONTROL_PLANE.md  MCP_AWARE_OPERATOR_POLICY.md  MERGE_AWARE_HANDOFF.md  MISSION_APPROVAL_ENVELOPE.md  MISSION_EXECUTOR.md  MISSION_INTAKE_OPTIMIZER.md  MODE_LAUNCH_GUIDE.md  ONE_DROP_BUILD_MODE.md  OUTPUT_SHELF.md  PAST_SESSION_SEARCH.md  PHASE_TEMPLATE_SYSTEM.md  PROMPT_COMPRESSION.md  PROOF_AWARENESS_LAYER.md  PUBLIC_PROOF_CANVAS.md  READ_ONLY_VERIFICATION_MODE.md  RELEASE_CANDIDATE.md  REPAIR_INTELLIGENCE_LAYER.md  REPLAY_PROOF_SURFACE.md  (+33 more)
docs/PROMPTS/: FUTURE_PHASE_DEFAULT_PROMPT.md  NEXT_TAB_PROMPT.md  S10_IMPLEMENTATION_PROMPT.md
drops/s1/: README.md  StealthEye_Cloud_S1_Mission_Executor_Drop.zip.b64
public/proof/: index.html
schemas/: ActionPacketV0.schema.json  AdapterCandidateCatalogV0.schema.json  AdapterDescriptorIntegrityV0.schema.json  AdapterRiskScoreV0.schema.json  AdapterTypeStateV0.schema.json  AgentModeTaskPacketV0.schema.json  ApprovalCompressionPolicyV0.schema.json  ApprovalCountReportV0.schema.json  AssistantExecutionDisciplineV0.schema.json  AssistantMistakePatternV0.schema.json  AssistantOperatingProfileV0.schema.json  AssistantOutputModeV0.schema.json  AssistantOutputReviewV0.schema.json  AssistantSelfAuditV0.schema.json  AssistantTraceDigestV0.schema.json  AtomicDropPackageV0.schema.json  AuthorityQueueV0.schema.json  BackpressurePolicyV0.schema.json  BatchRepairPlanV0.schema.json  BatchRepoMutationV0.schema.json  BestAgentModeV0.schema.json  BoundaryOnlyStopPolicyV0.schema.json  BoundaryPacketV0.schema.json  BoundaryStopReportV0.schema.json  BoundaryStopV0.schema.json  BranchControllerV0.schema.json  BranchLifecycleV0.schema.json  BrowserArtifactIndexV0.schema.json  BrowserConsoleFailureV0.schema.json  BrowserDomSketchV0.schema.json  BrowserNetworkFailureV0.schema.json  BrowserObservationPacketV0.schema.json  BrowserRepairPacketV0.schema.json  BrowserReplayPackV0.schema.json  BrowserRouteSmokeV0.schema.json  BrowserRunRequestV0.schema.json  BrowserScreenshotRefV0.schema.json  BuildCockpitCardV0.schema.json  BuildVelocityReportV0.schema.json  CandidateBranchV0.schema.json  (+217 more)
scripts/: check-s10-assistant-optimizer-artifacts.mjs  check-s11-mission-executor-artifacts.mjs  check-s12-mission-gauntlet-artifacts.mjs  check-s7-activation-artifacts.mjs  check-s8-remediator-artifacts.mjs  check-s9-build-accelerator-artifacts.mjs  s10-assistant-optimizer-proof.mjs  s11-mission-executor-proof.mjs  s12-mission-gauntlet-proof.mjs  s7-knowledge-mirror-export.mjs  s7-notification-activation.mjs  s8-remediator-proof.mjs  s9-build-accelerator-proof.mjs
(+40 files in other folders)
