[workspace]
members = [
    "crates/secloud-packets",
    "crates/secloud-relay",
    "crates/secloud-seal",
    "crates/secloud-mission",
    "crates/secloud-file-bundle",
    "crates/secloud-ci",
    "crates/secloud-control",
    "crates/secloud-workers",
    "crates/secloud-learning",
    "crates/secloud-search",
    "crates/secloud-hypothesis",
    "crates/secloud-proof-viewer",
    "crates/secloud-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/StealthEyeLLC/stealtheye-cloud"
