[workspace]
members = [
    "crates/secloud-packets",
    "crates/secloud-relay",
    "crates/secloud-seal",
    "crates/secloud-mission",
    "crates/secloud-file-bundle",
    "crates/secloud-ci",
    "crates/secloud-control",
    "crates/secloud-workers",
    "crates/secloud-learning",
    "crates/secloud-search",
    "crates/secloud-hypothesis",
    "crates/secloud-proof-viewer",
    "crates/secloud-hardening",
    "crates/secloud-release",
    "crates/secloud-e2e",
    "crates/secloud-gateway",
    "crates/secloud-mcp-adapters",
    "crates/secloud-gemini-worker",
    "crates/secloud-knowledge-mirror",
    "crates/secloud-notifications",
    "crates/secloud-permission",
    "crates/secloud-guard",
    "crates/secloud-repo-worker",
    "crates/secloud-mobile-qa",
    "crates/secloud-repair-readiness",
    "crates/secloud-activations",
    "crates/secloud-remediator",
    "crates/secloud-build-accelerator",
    "crates/secloud-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/StealthEyeLLC/stealtheye-cloud"
