[package]
name = "secloud-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "secloud"
path = "src/main.rs"

[dependencies]
secloud-packets = { path = "../secloud-packets" }
secloud-relay = { path = "../secloud-relay" }
secloud-seal = { path = "../secloud-seal" }
secloud-mission = { path = "../secloud-mission" }
secloud-file-bundle = { path = "../secloud-file-bundle" }
secloud-ci = { path = "../secloud-ci" }
secloud-control = { path = "../secloud-control" }
secloud-workers = { path = "../secloud-workers" }
