[package]
name = "secloud-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "secloud"
path = "src/main.rs"

[dependencies]
secloud-packets = { path = "../secloud-packets" }
secloud-relay = { path = "../secloud-relay" }
secloud-seal = { path = "../secloud-seal" }
secloud-mission = { path = "../secloud-mission" }
secloud-file-bundle = { path = "../secloud-file-bundle" }
secloud-ci = { path = "../secloud-ci" }
secloud-control = { path = "../secloud-control" }
secloud-workers = { path = "../secloud-workers" }
secloud-learning = { path = "../secloud-learning" }
secloud-search = { path = "../secloud-search" }
secloud-hypothesis = { path = "../secloud-hypothesis" }
secloud-proof-viewer = { path = "../secloud-proof-viewer" }
secloud-hardening = { path = "../secloud-hardening" }
secloud-release = { path = "../secloud-release" }
secloud-e2e = { path = "../secloud-e2e" }
secloud-gateway = { path = "../secloud-gateway" }
secloud-mcp-adapters = { path = "../secloud-mcp-adapters" }
secloud-gemini-worker = { path = "../secloud-gemini-worker" }
secloud-knowledge-mirror = { path = "../secloud-knowledge-mirror" }
secloud-notifications = { path = "../secloud-notifications" }
secloud-permission = { path = "../secloud-permission" }
secloud-guard = { path = "../secloud-guard" }
secloud-repo-worker = { path = "../secloud-repo-worker" }
secloud-mobile-qa = { path = "../secloud-mobile-qa" }
secloud-repair-readiness = { path = "../secloud-repair-readiness" }
secloud-remediator = { path = "../secloud-remediator" }
secloud-build-accelerator = { path = "../secloud-build-accelerator" }
